kubernetes/apps/automation/homeassistant/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8123
      protocol: TCP
      targetPort: 8123
  selector:
    app: homeassistant
